--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "fast-xml-parser": "^5.3.0",
     "groq-sdk": "^0.33.0",
     "luxon": "^3.7.2",
+    "mime-types": "^3.0.1",
+    "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "openai": "^5.23.0",
     "rss-parser": "^3.13.0",
@@ -31,6 +33,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/luxon": "^3.7.1",
+    "@types/mime-types": "^3.0.1",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.7.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
